Add back incorrectly stripped italics

--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -35,7 +35,7 @@ If your account is part of an organization created prior to October 2022, you mi
   width="300"
 />
 
- legacy organizations can upgrade to a current plan. [See details.](../org/plans#upgrading-to-a-current-plan)
+Some legacy organizations can upgrade to a current plan. [See details.](../org/plans#upgrading-to-a-current-plan)
 
 </Note>
 
@@ -309,12 +309,12 @@ cors:
     # highlight-end
 ```
 
-**To allow browser-based queries from any domain,** you can instead set `allowanyorigin: true`:
+**To allow browser-based queries from any domain,** you can instead set `allow_any_origin: true`:
 
 ```yaml
 cors:
   # highlight-start
-  allowanyorigin: true
+  allow_any_origin: true
   # highlight-end
 ```
 
