--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -224,7 +224,7 @@ jobs:
   # ...other jobs...
 
   # Define a separate job for each environment you validate against.
-  checkagainststaging:
+  check_against_staging:
     docker:
       - image: circleci/node:12
 
