--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -81,7 +81,7 @@ The router then needs to connect directly to the collector instance. Here's an e
 
 ```yaml title="router.yaml"
 cors:
-  allowanyorigin: true
+  allow_any_origin: true
 supergraph:
   listen: 0.0.0.0:4000
 telemetry:
@@ -106,7 +106,7 @@ Here's an example router configuration for connecting directly to New Relic:
 
 ```yaml title="router.yaml"
 cors:
-  allowanyorigin: true
+  allow_any_origin: true
 supergraph:
   listen: 0.0.0.0:4000
 telemetry:
