Remove additional italics

--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -230,7 +230,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
     src="../../img/cloud-dedicated/listener-complete.jpg"
 />
 
-12. Do _NOT_ select a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
+12. Do NOT select a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
 
   <img
     className="screenshot"
