--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -64,7 +64,7 @@ The **Rules Severity Configuration** category of your linter configuration displ
 Click a rule's severity to set it to any of the following:
 
 - **Error.** Any violation of this rule causes the associated linter check to fail.
-    - This in turn causes the _entire schema checks run_ to fail, which is useful for failing builds in CI.
+    - This in turn causes the entire schema checks run to fail, which is useful for failing builds in CI.
 - **Warn.** Violations of this rule are flagged in checks reports, but they don't cause the associated linter check to fail.
 - **Ignore.** Violations of this rule are ignored entirely.
 
