--- a/src/content/graphos/delivery/schema-proposals/configuration.mdx
+++ b/src/content/graphos/delivery/schema-proposals/configuration.mdx
@@ -80,7 +80,7 @@ Defaults:
 
 <td>
 
-The _minimum_ [role](../../org/members/#organization-wide-member-roles) required to create or edit proposals.
+The minimum [role](../../org/members/#organization-wide-member-roles) required to create or edit proposals.
 
 <br/>
 
@@ -151,7 +151,7 @@ Changing the number of required approvals may update the status of existing prop
 ### Require default reviewer approval
 
 By default, any team member's approval can contribute to the [minimum number of required approvals](#required-approvals).
-Once you've added [**default reviewers**](#default-reviewers), you can require _at least one_ approval to come from a default reviewer by selecting **Require at least one default reviewer for all proposals on this graph.**
+Once you've added [**default reviewers**](#default-reviewers), you can require at least one approval to come from a default reviewer by selecting **Require at least one default reviewer for all proposals on this graph.**
 
 <img
   src="../../img/schema-proposals/require-default-reviewer-approval.jpg"
