--- a/src/content/shared/pq-security-levels.mdx
+++ b/src/content/shared/pq-security-levels.mdx
@@ -72,7 +72,7 @@ You can use these router logs to audit operations sent to your router and ask cl
 
 <Caution>
 
-Before applying this configuration, ensure your PQL contains all GraphQL operations that _all active versions_ of your clients execute. If you enable safelisting without ensuring this, your router will reject any unpublished client operations.
+Before applying this configuration, ensure your PQL contains all GraphQL operations that all active versions of your clients execute. If you enable safelisting without ensuring this, your router will reject any unpublished client operations.
 
 </Caution>
 
