--- a/src/content/technotes/TN0036-owner-pattern.mdx
+++ b/src/content/technotes/TN0036-owner-pattern.mdx
@@ -7,7 +7,7 @@ id: TN0036
 tags: [federation]
 ---
 
-In Federation 2, the notion of "extending" an entity type is strictly conceptual. All definitions of a type in different subgraphs are merged according to the "shareability" of fields. In the following example, neither subgraph really owns or extends the `Product` entity. Instead, they both _contribute fields_ to it.
+In Federation 2, the notion of "extending" an entity type is strictly conceptual. All definitions of a type in different subgraphs are merged according to the "shareability" of fields. In the following example, neither subgraph really owns or extends the `Product` entity. Instead, they both contribute fields to it.
 
 <CodeColumns>
 
