Callout that proposals dont deploy changes

--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -46,6 +46,8 @@ Managing schema changes directly in GraphOS Studio provides the following benefi
 
 Team members [create](./creation), [review](./review), and [approval](./review#approvals) schema proposals in GraphOS Studio. After approval, the team implements the proposal&mdash;including resolvers and any supporting code changes&mdash; before publishing the schema changes to GraphOS.
 
+<SchemaProposalImplementationNote />
+
 [Org and graph admins](../../org/members/#organization-wide-member-roles) can [configure schema checks](../schema-checks/#proposals-checks) to ensure an organization only publishes changes approved through a proposal.
 
 Before diving into schema proposal workflow, it's helpful to understand proposal statuses.
