--- a/src/content/shared/approved-schema-proposals.mdx
+++ b/src/content/shared/approved-schema-proposals.mdx
@@ -6,11 +6,9 @@ Once a proposal receives the [minimum number of approvals](/graphos/delivery/sch
   alt="An approved schema proposal in GraphOS Studio"
 />
 
-<Note>
-
 Revisions made to an approved proposal don't change the **Approved** status of the proposal.
 To set the proposal's status to **Open for feedback** or another status, [manually change it](/graphos/delivery/schema-proposals/creation#change-proposal-status) from the proposal's overview page.
 
-</Note>
+Once a proposal is approved, your team can begin implementing the approved changes.
 
-Once a proposal is approved, your team can begin [implementing the approved changes](/graphos/delivery/schema-proposals/implementation).
+<SchemaProposalImplementationNote />
