--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -86,7 +86,7 @@ Default status upon creation until the proposal is ready for review.
 <td><a href="./creation#change-proposal-status">Manual</a></td>
 <td>Signals the proposal is ready for review.
 <br/><br/>
-- If <a href="../configuration/#default-reviewers">default reviewers</a> are configured, they become assigned for review.</td>
+- If <a href="./configuration/#default-reviewers">default reviewers</a> are configured, they become assigned for review.</td>
 </tr>
 <tr>
 <td>
@@ -97,12 +97,12 @@ Default status upon creation until the proposal is ready for review.
 <td>Automatic</td>
 <td>
 Signals the{' '}
-<a href="../configuration#required-approvals">
+<a href="./configuration/#required-approvals">
 minimum number of reviewers
 </a>{' '}
 has approved the proposal.
 <br/> <br/>
-- If you've <a href="../configuration/#require-default-reviewer-approval">required default reviewer approval</a>, at least one approval must be from a <a href="../configuration/#default-reviewers">default reviewer</a>.
+- If you've <a href="./configuration/#require-default-reviewer-approval">required default reviewer approval</a>, at least one approval must be from a <a href="./configuration/#default-reviewers">default reviewer</a>.
 </td>
 </tr>
 <tr>
@@ -114,7 +114,7 @@ has approved the proposal.
 <td>Automatic</td>
 <td>
 Signals all the proposal's changes have been{' '}
-<a href="./publishing-schemas">published</a>. <br />
+<a href="../publishing-schemas">published</a>. <br />
 <br /> - Implemented proposals can't receive further revisions. <br /> -
 Their status can't be updated.
 </td>
