--- a/src/content/graphos/explorer/additional-features.mdx
+++ b/src/content/graphos/explorer/additional-features.mdx
@@ -226,7 +226,7 @@ You can change which percentile you want to see hints from at any time in the Ex
 
 The Explorer [extends your schema with `graphql-lodash`](https://github.com/APIs-guru/graphql-lodash) on the client side, so you can write queries that include lodash directives and they will resolve correctly. This is helpful if you want to manipulate your response data into a specific format for exporting, or if you want to do some quick analysis without needing to export.
 
-Here's an example of a query that uses `graphql-lodash`. You can try pasting this in the Explorer embedded at http://apollographql.com/studio/develop:
+Here's an example of a query that uses `graphql-lodash`. You can try pasting this in the [Explorer Sandbox](https://studio.apollographql.com/sandbox/):
 
 ```graphql title="example.graphql"
 query StarWarsGenderStats {
